--- a/client/src/Components/auth/Login.css
+++ b/client/src/Components/auth/Login.css
@@ -1,20 +1,73 @@
 
+* {
+  box-sizing: border-box;
+}
 
 
-.back-image {
- 
-	
-  /* Set up proportionate scaling */
-  width: 100%;
-  height: auto;
-	
-  /* Set up positioning */
-  position: fixed;
-  top: 0;
-  left: 0;
- 
+h1 {
+  text-align: center;
+
+
+}
+
+.logo{
+  width: 500px;
+}
 
 
 
+.login{
+  text-align: center;
+  margin: 10em 3em ;
+  font-size: 20px;
+
+}
+
+.login form{
+  align-items: center;
+  display:flex;
+  flex-direction: column; 
   
+}
+
+.login input{ 
+ 
+  padding:10px 13px;
+  width: 80vw;
+  border-bottom:1px solid rgb(219, 219, 219);
+  box-shadow: 0px 1px 8px rgba(0, 0, 0,0.1);
+  border-radius: 5px;
+  margin-top:0.3em 0
+}
+
+.login label{
+  display:flex;
+  flex-direction: column;
+  color:#0a0a0a;
+  text-align: start;
+  font: bold;
+  
+}
+
+.log {
+background-color: purple;
+color: white;
+-moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+width: 27%;
+}
+
+
+
+@media (min-width: 1225px) {
+  
+  .login{
+    margin-top: 9em
+    
+    
+  }
+  .login input{
+    width: 25vw
+  }
 }
