--- a/client/src/Components/auth/Login.css
+++ b/client/src/Components/auth/Login.css
@@ -1,53 +1,25 @@
-
 * {
-  box-sizing: border-box;
-  color: #0a0a0a;
+  color: black;
+ 
 }
 
+/*SECTION 1*/
 .green {
-  background: #fafafa;
-  background-size:auto 150px;
-
-  color: #fff;
-
-  display:flex;
-
-
-  margin-left:auto;
-  /* width: 2500px; */
-
-  width: 100%;  
-  height: 190%;  
-  object-fit: cover; 
+  background: #ca0707;
+  width: 80%; 
+  
 
 }
-
-.terrain {
-  color: #fff;
-
-  display:flex;
-
-  margin-left:auto;
- 
-
-  width: 40%;  
-  height: 40%;  
-  object-fit: cover; 
- 
- 
-}
-
 
 h1 {
   text-align: center;
-
 
 }
 
 .logo{
   width: 500px;
-}
 
+}
 
 
 .login{
@@ -65,13 +37,13 @@ h1 {
 }
 
 .login input{ 
- 
   padding:10px 13px;
   width: 80vw;
   border-bottom:1px solid rgb(14, 13, 13);
   box-shadow: 0px 1px 8px rgba(0, 0, 0,0.1);
   border-radius: 5px;
   margin-top:0.3em 0
+
 }
 
 .login label{
@@ -89,22 +61,83 @@ color: rgb(255, 255, 255);
 -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
     border-radius: 10px;
-width: 27%;
+
+width: 325px;
+height: 50px;
+left: 265px;
+top: 548px;
+background: #673389;
+border-radius: 80px;
+font-size: 22px;
+font-style: bold;
+
 }
 
+.sign {
+  background-color: purple;
+color: rgb(255, 255, 255);
+-moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+width: 325px;
+height: 50px;
+left: 265px;
+top: 548px;
+background: #673389;
+border-radius: 80px;
+font-size: 22px;
+font-style: bold;
+  
+}
+
+/*DON'T HAVE ACCOUNT*/
 .orange {
-  text-align: center;
-  align-items: center;
+background-image: url('https://res.cloudinary.com/dro81vxlb/image/upload/v1628672754/terra_arybys.png');
+background-size: cover;
+width: 50%;
+font-style: normal;
+text-align: center;
+letter-spacing: 0.02em;
+padding: auto;
+
 
 }
 
+.butsign {
 
+  -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    color:yellow;
+    background-color: transparent;
+   
+}
+
+/*FORGOT PASSWORD*/
+.forgot {
+font-style: normal;
+font-weight: normal;
+font-size: 15px;
+line-height: 18px;
+align-items: right;
+letter-spacing: 0.02em;
+text-decoration-line: underline;
+
+
+}
+
+/*SECTION 2*/
+.terrain {
+  color: #fff;
+  display:flex;
+  margin-left:auto;
+  object-fit: cover; 
+ 
+}
 
 @media (min-width: 1225px) {
-  
   .login{
     margin-top: 9em
-    
     
   }
   .login input{
