--- a/client/src/Components/auth/Signup.css
+++ b/client/src/Components/auth/Signup.css
@@ -1,8 +1,91 @@
-.form label {
-	display: block;
-	margin-bottom: 10px;
+.terrain {
+  color: #fff;
+
+  display:flex;
+
+  margin-left:auto;
+ 
+
+  width: 40%;  
+  height: 40%;  
+  object-fit: cover; 
+ 
+ 
 }
 
-.form {
-	color: saddlebrown;
+.green {
+  background: #fafafa;
+  background-size:auto 150px;
+
+  color: #fff;
+
+  display:flex;
+
+
+  margin-left:auto;
+  /* width: 2500px; */
+
+  width: 100%;  
+  height: 190%;  
+  object-fit: cover; 
+
 }
+
+.log {
+	background-color: purple;
+	color: rgb(255, 255, 255);
+	-moz-border-radius: 10px;
+			-webkit-border-radius: 10px;
+			border-radius: 10px;
+	width: 27%;
+	}
+
+
+
+.signup{
+  margin: 7.5em 1.5em 0;
+  font-size:0.9em;
+  text-align: center;
+	
+}
+
+.signup form{
+  margin-top: 2em;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+
+
+
+}
+
+
+.signup label{
+  display:flex;
+  flex-direction: column;
+  color:#cfa5a1;
+  text-align: start;
+}
+
+.signup .btn{
+  width: 50em;
+  border: 1px solid rgb(235, 235, 235);
+  font-weight: bold;
+  font-size: 0.8em;
+  padding: 1em 0em;
+}
+
+
+@media (min-width: 1225px) {
+
+.signup{
+  margin-top: 9em
+}
+
+.signup input{ 
+  width: 25vw
+}
+}
+
+
