--- a/client/src/Components/auth/Login.css
+++ b/client/src/Components/auth/Login.css
@@ -7,6 +7,7 @@
 .green {
   background: #ca0707;
   width: 80%; 
+  margin: 0;
   
 
 }
@@ -132,6 +133,7 @@ text-decoration-line: underline;
   display:flex;
   margin-left:auto;
   object-fit: cover; 
+  margin: 0;
  
 }
 
