--- a/client/src/Components/auth/Signup.css
+++ b/client/src/Components/auth/Signup.css
@@ -2,15 +2,13 @@
 /*BLOC 1*/
 .green {
 display:flex;
-width: 100%;  
-height: 190%;  
+margin: 0;
 object-fit: cover; 
 padding: 0px 0px;
 margin: 0;
 background-image: url("https://res.cloudinary.com/dro81vxlb/image/upload/v1628789356/terrainsignup_xroefx.png");
 background-repeat: no-repeat;
 background-position: right;
-
 
 }
 
@@ -23,10 +21,11 @@ width: 27%;
 }
 
 .signup{
-margin: 25em;
-font-size:0.9em;
 text-align: center;
-	
+margin: 20em ;
+
+
+
 }
 
 .signup form{
@@ -35,6 +34,11 @@ display:flex;
 flex-direction: column;
 justify-content: space-evenly;
 align-items: center;
+
+}
+
+.sousbloc3{
+  
 
 }
 
