--- a/client/src/Components/auth/Signup.css
+++ b/client/src/Components/auth/Signup.css
@@ -12,13 +12,13 @@ background-position: right;
 
 }
 
-.green .log {
-background-color: purple;
+/* .green .log {
+/* background-color: purple;
 color: rgb(255, 255, 255);
 border-radius: 10px;
-width: 27%;
+width: 27%; */
 
-}
+/* }  */
 
 .green .signup{
 text-align: center;
